--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
-matplotlib
-wfdb
-torch
-torchinfo
-tqdm
-scipy
-counter
-scikit-learn
+# PyTorch and deep learning
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+
+# Numerical computing
+numpy>=1.24.0
+scipy>=1.10.0
+
+# Data handling
+pandas>=2.0.0
+
+# Machine learning utilities
+scikit-learn>=1.3.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Progress bars
+tqdm>=4.65.0
+
+# For reading .mat files (PhysioNet data format)
+# scipy includes scipy.io which handles MATLAB files
